# certonaut

./: .gitignore  Cargo.toml  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: rust-clippy.yml  rust.yml
.sqlx/: query-090ada33193efb263dcf90cb4266fd63bb36294379e1f2ff73148d01f554c63c.json  query-1df78a11d04a1c5b21cce5c9bbacfd927fac5cef54ff9dd290825b9f4fe93d10.json  query-31d9b372e5d12c2883b784803fd6888d2164ef28a43e4b22b092176b5b3bed52.json  query-440c6e510db1c710047ee9841d9cd2043a44b4d5d388853e9de7d3f915ea3230.json  query-9d820f4777b6794cd496d99b324469d88ee8a578cc081e152f638c12fd47516e.json  query-ab822b06abfa5b07377a675110cd876105bd0cd14030a2339fbca87f1766afc0.json  query-d5b733bfa2bd366af9a2167102a7766920569fda3329c54a3b0d4e101fbc8011.json  query-e6bff235747c93b30250e3dda331d96eec758eb9970ffcfff07b9308dfdf862e.json  query-ea4febe2104c2e50869da906ef0c73ad7bd28281bf476e31125bb46fc1d0c2d3.json
db/migrations/: 001_initial.sql
proto/: astrolink.proto  messages.proto
src/: cert.rs  challenge_solver.rs  cli.rs  client.rs  cmd_runner.rs  daemon.rs  error.rs  interactive.rs  issuer.rs  lib.rs  main.rs  non_interactive.rs  pebble.rs  renew.rs  time.rs  url.rs  util.rs
src/acme/: client.rs  error.rs  http.rs  mod.rs  object.rs
src/bpf/: port_mapper.bpf.c  port_mapper.skel.rs
src/config/: default.rs  mod.rs  toml.rs
src/crypto/: asymmetric.rs  jws.rs  mod.rs  signing.rs  symmetric.rs
src/dns/: mod.rs  name.rs  resolver.rs
src/dns/solver/: acme_dns.rs  mod.rs
src/interactive/: editor.rs  mod.rs  service.rs
src/magic/: bpf_proxy.rs  mod.rs  noop.rs
src/protocol/: client.rs  error.rs  http.rs  mod.rs  object.rs
src/rpc/: client.rs  mod.rs  server.rs
src/rpc/client/: mod.rs
src/rpc/server/: mod.rs
src/state/: db.rs  lock.rs  migration.rs  mod.rs  types.rs
testdata/: account.key  deserialize_invalid_test_account_no_status.json  deserialize_invalid_test_authz_no_challenge.json  deserialize_invalid_test_challenge_no_token.json  deserialize_invalid_test_directory_fields_missing.json  deserialize_invalid_test_metadata_invalid_url.json  deserialize_invalid_test_order_no_identifiers.json  deserialize_invalid_test_renewalInfo_minimal.json  deserialize_invalid_test_token_invalid_chars.json  deserialize_test_account_boulder.json  deserialize_test_account_minimal.json  deserialize_test_account_pebble.json  deserialize_test_account_rfc.json  deserialize_test_authz_boulder.json  deserialize_test_authz_minimal.json  deserialize_test_authz_pebble.json  deserialize_test_authz_rfc.json  deserialize_test_challenge_boulder.json  deserialize_test_challenge_pebble.json  deserialize_test_directory_boulder.json  deserialize_test_directory_minimal.json  deserialize_test_directory_pebble.json  deserialize_test_directory_rfc.json  deserialize_test_metadata_boulder.json  deserialize_test_metadata_eab.json  deserialize_test_metadata_pebble.json  deserialize_test_nonce_pebble.json  deserialize_test_order_boulder.json  deserialize_test_order_minimal.json  deserialize_test_order_pebble.json  deserialize_test_order_rfc.json  deserialize_test_renewalInfo_no_end_date.json  deserialize_test_renewalInfo_rfc.json  deserialize_test_token_pebble.json
testdata/certs/: testcert.pem
testdata/configs/: acme_dns.toml
testdata/serialization/: deserialize_invalid_test_account_no_status.json  deserialize_invalid_test_authz_no_challenge.json  deserialize_invalid_test_challenge_no_token.json  deserialize_invalid_test_directory_fields_missing.json  deserialize_invalid_test_metadata_invalid_url.json  deserialize_invalid_test_order_no_identifiers.json  deserialize_test_account_boulder.json  deserialize_test_account_pebble.json  deserialize_test_authz_boulder.json  deserialize_test_authz_minimal.json  deserialize_test_authz_pebble.json  deserialize_test_authz_rfc.json  deserialize_test_challenge_boulder.json  deserialize_test_challenge_pebble.json  deserialize_test_directory_boulder.json  deserialize_test_directory_minimal.json  deserialize_test_directory_pebble.json  deserialize_test_directory_rfc.json  deserialize_test_metadata_boulder.json  deserialize_test_metadata_eab.json  deserialize_test_metadata_pebble.json  deserialize_test_order_boulder.json  deserialize_test_order_minimal.json  deserialize_test_order_pebble.json  deserialize_test_order_rfc.json
tests/: multi_dns_integration_test.rs  pebble_integration_test.rs  webroot_integration_test.rs
tests/common/: dns.rs  mod.rs
