[package]
name = "certonaut"
version = "0.1.0"
repository = "TODO"
license = "MIT"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
async-trait = "0.1.83"
aws-lc-rs = { version = "1.11.1", default-features = false, features = ["alloc", "aws-lc-sys", "prebuilt-nasm"] }
base64 = "0.22.1"
clap = { version = "4.5.21", features = ["derive", "env"] }
crossterm = "0.28.1"
futures = "0.3.31"
inquire = "0.7.5"
nom-rfc8288 = "0.2.3"
pem = "3.0.4"
rcgen = { version = "0.13.1", default-features = false, features = ["crypto", "pem", "aws_lc_rs"] }
# TODO: Use rustls since that's probably what tonic also uses? However, in order to avoid reqwest depending on
# ring in that case, we need to build the TLS client ourselves, which may involve bringing in rustls directly
reqwest = { version = "0.12.9", default-features = false, features = ["json", "charset", "http2", "native-tls"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
time = { version = "0.3.36", features = ["serde", "formatting", "parsing"] }
# TODO: Narrow features
tokio = { version = "1.41.1", features = ["full"] }
toml_edit = { version = "0.22.22", features = ["serde", "display"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = { version = "2.5.4", features = ["serde"] }
x509-parser = "0.16.0"

[build-dependencies]
toml = "0.8.19"

[dev-dependencies]
rstest = "0.23.0"
tempfile = "3.14.0"
