[package]
name = "certonaut"
version = "0.1.0"
repository = "TODO"
license = "MIT"
edition = "2021"
rust-version = "1.80.1"

[features]
magic-solver = ["dep:libbpf-rs", "dep:libbpf-cargo", "dep:vmlinux", "dep:http", "dep:http-body-util", "dep:hyper", "dep:hyper-util"]

[dependencies]
anyhow = "1.0.94"
async-trait = "0.1.83"
aws-lc-rs = { version = "1.11.1", default-features = false, features = ["alloc", "aws-lc-sys", "prebuilt-nasm"] }
base64 = "0.22.1"
clap = { version = "4.5.23", features = ["derive", "env"] }
crossterm = "0.28.1"
futures = "0.3.31"
httpdate = "1.0.3"
inquire = "0.7.5"
nom-rfc8288 = "0.2.3"
parking_lot = "0.12.3"
pem = "3.0.4"
rcgen = { version = "0.13.1", default-features = false, features = ["crypto", "pem", "aws_lc_rs"] }
# TODO: In order to avoid reqwest depending on ring, we (currently) need to build the TLS client ourselves,
# which may involve bringing in rustls directly.
reqwest = { version = "0.12.9", default-features = false, features = ["json", "charset", "http2", "rustls-tls"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
time = { version = "0.3.37", features = ["serde", "formatting", "parsing"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = "0.7.13"
toml_edit = { version = "0.22.22", features = ["serde", "display"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = { version = "2.5.4", features = ["serde"] }
x509-parser = "0.16.0"
itertools = "0.13.0"

[target.'cfg(target_os = "linux")'.dependencies]
caps = { version = "0.5.5" }
libbpf-rs = { version = "0.24.8", optional = true }
http = { version = "1.2.0", optional = true }
http-body-util = { version = "0.1.2", optional = true }
hyper = { version = "1.5.1", features = ["client", "server"], optional = true }
hyper-util = { version = "0.1.10", optional = true }

[build-dependencies]
toml = "0.8.19"

[target.'cfg(target_os = "linux")'.build-dependencies]
libbpf-cargo = { version = "0.24.8", optional = true }
vmlinux = { version = "0.0", git = "https://github.com/libbpf/vmlinux.h.git", rev = "83a228cf37fc65f2d14e4896a04922b5ee531a94", optional = true }

[dev-dependencies]
bstr = "1.11.1"
httptest = "0.16.1"
rstest = "0.23.0"
tempfile = "3.14.0"

[profile.release]
# Makes linking really sloooow, but gives us a faster + smaller binary.
lto = "fat"
