[package]
name = "certonaut"
version = "0.1.0"
repository = "https://github.com/certonaut/certonaut"
license = "MIT"
edition = "2024"
rust-version = "1.85.0"
default-run = "certonaut"

[features]
magic-solver = ["dep:libbpf-rs", "dep:libbpf-cargo", "dep:vmlinux", "dep:http", "dep:http-body-util", "dep:hyper", "dep:hyper-util"]

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.84"
aws-lc-rs = { version = "1.13.1", default-features = false, features = ["alloc", "ring-io", "aws-lc-sys", "prebuilt-nasm"] }
base64 = "0.22.1"
clap = { version = "4.5.23", features = ["derive", "env"] }
crossterm = "0.28.1"
futures = "0.3.31"
httpdate = "1.0.3"
inquire = { version = "0.7.5", features = ["editor"] }
nom-rfc8288 = "0.2.3"
parking_lot = "0.12.3"
pem = "3.0.4"
rcgen = { version = "0.13.2", default-features = false, features = ["pem", "aws_lc_rs"] }
# TODO: In order to avoid reqwest depending on ring, we (currently) need to build the TLS client ourselves,
# which may involve bringing in rustls directly.
reqwest = { version = "0.12.12", default-features = false, features = ["json", "charset", "http2", "rustls-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
time = { version = "0.3.37", features = ["serde", "formatting", "parsing"] }
tokio = { version = "1.43.1", features = ["full"] }
tokio-util = "0.7.13"
toml_edit = { version = "0.22.22", features = ["serde", "display"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = { version = "2.5.4", features = ["serde"] }
x509-parser = "0.17.0"
itertools = "0.14.0"
cyborgtime = "2.1.1"
strum = { version = "0.27.1", features = ["derive"] }
fs4 = { version = "0.13.0", features = ["tokio"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite", "time"] }
rand = "0.9.0"
hickory-resolver = "0.25.1"
thiserror = "2.0.12"

[target.'cfg(target_os = "linux")'.dependencies]
caps = { version = "0.5.5" }
libbpf-rs = { version = "0.24.8", features = ["static", "vendored"], optional = true }
http = { version = "1.2.0", optional = true }
http-body-util = { version = "0.1.2", optional = true }
hyper = { version = "1.5.1", features = ["client", "server"], optional = true }
hyper-util = { version = "0.1.10", optional = true }

[build-dependencies]
toml = "0.8.19"

[target.'cfg(target_os = "linux")'.build-dependencies]
libbpf-cargo = { version = "0.24.8", optional = true }
vmlinux = { version = "0.0", git = "https://github.com/libbpf/vmlinux.h.git", rev = "83a228cf37fc65f2d14e4896a04922b5ee531a94", optional = true }

[dev-dependencies]
bstr = "1.11.3"
faux = "0.1.12"
hickory-server = { version = "0.25.2", features = ["resolver"] }
mockito = "1.7.0"
rstest = "0.25.0"
tempfile = "3.15.0"
test-log = { version = "0.2.17", default-features = false, features = ["color", "trace"] }
testcontainers = "0.23.3"

[profile.release]
# Makes linking really sloooow, but gives us a faster + smaller binary.
lto = "fat"

[[bin]]
name = "create-dev-db"
path = "src/bin/create_dev_db.rs"
